Open the mergedimage.png for ora or kra file layers

BUG:403816