libs/ui/dialogs/kis_dlg_file_layer.cpp
@@ -44,8 +44,6 @@ KisDlgFileLayer::KisDlgFileLayer(const QString &basePath, const QString & name, 
     QWidget * page = new QWidget(this);
     dlgWidget.setupUi(page);
     QStringList mimes = KisImportExportManager::supportedMimeTypes(KisImportExportManager::Import);
-    // Nesting .kra files is not supported, so do not offer that option. See https://bugs.kde.org/show_bug.cgi?id=386515
-    mimes.removeAll("application/x-krita");
     dlgWidget.wdgUrlRequester->setMimeTypeFilters(mimes);
     setMainWidget(page);
 
