libs/ui/kis_safe_document_loader.h
@@ -25,11 +25,12 @@
 class KisSafeDocumentLoader : public QObject
 {
     Q_OBJECT
-public:
+private:
+    friend class KisFileLayer;
+
     KisSafeDocumentLoader(const QString &path = "", QObject *parent = 0);
     ~KisSafeDocumentLoader() override;
 
-public:
     void setPath(const QString &path);
     void reloadImage();
 private Q_SLOTS:
